Add divs in website

--- a/Activity 4/index.html
+++ b/Activity 4/index.html
@@ -17,6 +17,27 @@
         <button class="btn">Sign In</button>
         <img src="menu.png" alt="menu" id="menu">
     </div>
+    <div class="product" id="Product">
+        <div></div>
+        <p>Products</p>
+        <ul>
+            <a href="">Payment</a><a href="">Terminal</a><a href="">Connect</a>
+        </ul>
+    </div>
+    <div class="product" id="developers">
+        <div></div>
+        <p>Developers</p>
+        <ul>
+            <a href="">Plugins</a><a href="">Libraries</a><a href="">Billing</a>
+        </ul>
+    </div>
+    <div class="product" id="company">
+        <div></div>
+        <p>Company</p>
+        <ul>
+            <a href="">About</a><a href="">Customer</a><a href="">Poka</a>
+        </ul>
+    </div>
     <div class="img">
         <img src="https://vannilla-js-basic-project-26-stripe-submenus.netlify.app/images/hero.svg" alt="">
     </div>
