A little work remaining

--- a/Activity 4/index.html
+++ b/Activity 4/index.html
@@ -7,49 +7,77 @@
     <title>Stripe</title>
 </head>
 <body>
-    <div class="nav">
-        <img src="logo.svg" alt="logo">
-        <ul>
-            <li>Products</li>
-            <li>Developers</li>
-            <li>Company</li>
-        </ul>
-        <button class="btn">Sign In</button>
-        <img src="menu.png" alt="menu" id="menu">
-    </div>
-    <div class="product" id="Product">
-        <div></div>
-        <p>Products</p>
-        <ul>
-            <a href="">Payment</a><a href="">Terminal</a><a href="">Connect</a>
-        </ul>
-    </div>
-    <div class="product" id="developers">
-        <div></div>
-        <p>Developers</p>
-        <ul>
-            <a href="">Plugins</a><a href="">Libraries</a><a href="">Billing</a>
-        </ul>
-    </div>
-    <div class="product" id="company">
-        <div></div>
-        <p>Company</p>
-        <ul>
-            <a href="">About</a><a href="">Customer</a><a href="">Poka</a>
-        </ul>
-    </div>
-    <div class="img">
-        <img src="https://vannilla-js-basic-project-26-stripe-submenus.netlify.app/images/hero.svg" alt="">
-    </div>
-    <div class="content">
-        <div class="heading">
-            <h1>Payments infrastructure for the internet</h1>
-            <p>Millions of companies of all sizes—from startups to Fortune 500s—use Stripe’s software and APIs to accept payments, send payouts, and manage their businesses online.</p>
-            <button class="btn">Start Now</button>
+    <div  class="black">
+        <div class="nav">
+            <img src="logo.svg" alt="logo">
+            <ul class="links">
+                <li>Products</li>
+                <li>Developers</li>
+                <li>Company</li>
+                <div>
+                    <div class="product none" id="Product">
+                        <div></div>
+                        <p>Products</p>
+                        <ul>
+                            <a href="">Payment</a><a href="">Terminal</a><a href="">Connect</a>
+                        </ul>
+                    </div>
+                    <div class="product none" id="developers">
+                        <div></div>
+                        <p>Developers</p>
+                        <ul>
+                            <a href="">Plugins</a><a href="">Libraries</a><a href="">Billing</a>
+                        </ul>
+                    </div>
+                    <div class="product none" id="company">
+                        <div></div>
+                        <p>Company</p>
+                        <ul>
+                            <a href="">About</a><a href="">Customer</a><a href="">Poka</a>
+                        </ul>
+                    </div>
+                </div>
+            </ul>
+            <button class="btn">Sign In</button>
+            <img src="menu.png" alt="menu" id="menu">
         </div>
-        <div class="phone">
-            <img src="phone.svg" alt="phone">
+        <div class="img">
+            <img src="https://vannilla-js-basic-project-26-stripe-submenus.netlify.app/images/hero.svg" alt="">
         </div>
+        <div class="content">
+            <div class="heading">
+                <h1>Payments infrastructure for the internet</h1>
+                <p>Millions of companies of all sizes—from startups to Fortune 500s—use Stripe’s software and APIs to accept payments, send payouts, and manage their businesses online.</p>
+                <button class="btn">Start Now</button>
+            </div>
+            <div class="phone">
+                <img src="phone.svg" alt="phone">
+            </div>
+        </div>
+    </div>
+    <div class="login">
+        <div id="img">
+            <img src="close.svg" alt="CloseBTN" >
+        </div>
+        <div class="loginItems">
+            <p>Products</p>
+            <ul>
+                <a href="">Payment</a><a href="">Terminal</a><a href="">Connect</a>
+            </ul>
+        </div>
+        <div class="loginItems">
+            <p>Developers</p>
+            <ul>
+                <a href="">Plugins</a><a href="">Libraries</a><a href="">Billing</a>
+            </ul>
+        </div>
+        <div class="loginItems">
+            <p>Company</p>
+            <ul>
+                <a href="">About</a><a href="">Customer</a><a href="">Poka</a>
+            </ul>
+        </div>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
