--- a/Activity 4/index.html
+++ b/Activity 4/index.html
@@ -7,7 +7,7 @@
     <title>Stripe</title>
 </head>
 <body>
-    <div  class="black">
+    <div  class="main">
         <div class="nav">
             <img src="logo.svg" alt="logo">
             <ul class="links">
@@ -55,9 +55,9 @@
             </div>
         </div>
     </div>
-    <div class="login">
+    <div class="login hw-none">
         <div id="img">
-            <img src="close.svg" alt="CloseBTN" >
+            <img src="close.svg" alt="CloseBTN" id="close">
         </div>
         <div class="loginItems">
             <p>Products</p>
