--- a/Activity 5/index.html
+++ b/Activity 5/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Carousel</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <img src="Images/fons-heijnsbroek-abstract-art-AddxUGgVonQ-unsplash.jpg" alt="" class="slide">
+        <img src="Images/sardar-kamran-khan-jYF1kn3eyHo-unsplash.jpg" alt="" class="slide">
+        <img src="Images/sardar-kamran-khan-kjgPM-1zK-o-unsplash.jpg" alt="" class="slide">
+    </div>
+    <div class="btns">
+        <button id="prev">Prev</button>
+        <button id="next">Next</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
