--- a/RotateNavigation/index.html
+++ b/RotateNavigation/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav"></div>
+    <div class="nav">
+        <img src="close_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="close" id="close">
+        <img src="menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="menu" id="menu">
+    </div>
     <main>
         <div class="behind">
             <div class="icons">
@@ -16,7 +19,7 @@
                 <h1 class="heading" id="h3">About Us</h1>
             </div>
         </div>
-        <div class="maincontent rotate">
+        <div class="maincontent">
             <div class="content">
                 <h1>My Dog</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officia laudantium, ea iure fugiat veritatis quas nisi necessitatibus vero sed deserunt nostrum dolor accusantium fuga enim minima, explicabo ex commodi repudiandae, alias excepturi! Minus sit, corrupti quisquam repudiandae optio nulla.</p>
