Modified a little bit

--- a/Range Slider/index.html
+++ b/Range Slider/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="val"></div>
+        <div class="val">0</div>
         <input type="range" value="" id="range">
     </div>
     <script src="script.js"></script>
